[package]
name = "types-rs-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.127"
starknet-types-core = "0.1.7"
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "3ee4325a72481e526b7c4fa0592ad822a391658b" }
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.4"
